--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -80,11 +80,14 @@ input[type="submit"].highlight{ background:#ffc100; border:1px solid #db0; text-
 #login form fieldset { background:0; border:0; margin-bottom:2em; padding:0; }
 #login form fieldset legend { font-weight:bold; }
 #login form label { margin:.95em 0 0 .85em; color:#666; }
-/* NEEDED FOR INFIELD LABELS */
-p.infield { position: relative; }
-label.infield { cursor: text !important; }
-#login form label.infield { position:absolute; font-size:1.5em; color:#AAA; }
-#login #dbhostlabel, #login #directorylabel { display:block; margin:.95em 0 .8em -8em; }
+
+input::-webkit-input-placeholder { color:#777; }
+input:-moz-placeholder { color:#777; }
+input:-ms-input-placeholder { color:#777; }
+input:focus::-webkit-input-placeholder { color:#aaa; }
+input:focus:-moz-placeholder { color:#aaa; }
+input:focus:-ms-input-placeholder { color:#aaa; }
+
 #login form input[type="checkbox"]+label { position:relative; margin:0; font-size:1em; text-shadow:#fff 0 1px 0; }
 #login form .errors { background:#fed7d7; border:1px solid #f00; list-style-indent:inside; margin:0 0 2em; padding:1em; }
 
